--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>LiveBPMN</title>
     <meta charset="UTF-8">
-    <meta name="author" content="Franck Barbier informatique - FBi"/>
+    <meta name="author" content="Barbier--Darnal informatique - B--Di"/>
     <meta name="description" content="BPMN 2.x graphical executor"/>
     <meta name="keywords" content="BPMN"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
