--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" type="text/css" href="./node_modules/tippy.js/dist/tippy.css"/>
 
     <script src="./node_modules/bpmn-js/dist/bpmn-viewer.production.min.js"></script>
-    <script src="./node_modules/bpmn-moddle/dist/bpmn-moddle.umd.prod.js"></script>
+    <!-- L'extension actuelle '.cjs' ne fonctionne pas au chargement d'où 'lib' -->
+    <script src="./lib/bpmn-moddle.umd.js"></script>
     <script src="./node_modules/scion-core/dist/scion.min.js"></script>
     <script src="./node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
     <script src="./node_modules/tippy.js/dist/tippy.umd.min.js"></script>
